--- a/index.html
+++ b/index.html
@@ -203,13 +203,36 @@
     }
 
     .stats {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-around;
       padding: 40px 20px;
       background: #141414;
       text-align: center;
-      perspective: 800px; /* ✅ додаємо перспективу */
+    }
+
+    .stats-header {
+      margin: 0 auto 30px auto;
+      text-align: center;
+      background-color: #1a1a1a;
+      border: 2px solid #2c2c2c;
+      border-radius: 10px;
+      padding: 20px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
+      max-width: 1000px;
+      transform-style: preserve-3d;
+    }
+
+    .stats-header h2 {
+      margin: 0;
+      color: #ff1e1e;
+      font-size: 1.8rem;
+      letter-spacing: 2px;
+    }
+
+    .stats-row {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin-top: 20px;
     }
 
     .stats-card {
@@ -221,35 +244,13 @@
       width: 200px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
       transition: transform 0.2s ease, box-shadow 0.2s ease;
-      transform-style: preserve-3d; /* ✅ потрібно для 3D ефекту */
+      transform-style: preserve-3d;
       will-change: transform;
     }
 
     .stats-card:hover {
       box-shadow: 0 0 20px rgba(255, 0, 0, 0.7);
       cursor: pointer;
-    }
-
-    /* Додатковий стиль для заголовка "ЧОМУ НАС ОБИРАЮТЬ" */
-    .stats-header {
-      width: 100%;
-      max-width: 1000px;
-      margin: 0 auto 30px auto;
-      text-align: center;
-      background-color: #1a1a1a;
-      border: 2px solid #2c2c2c;
-      border-radius: 10px;
-      padding: 20px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-      transform-style: preserve-3d;
-    }
-
-    .stats-header h2 {
-      margin: 0;
-      color: #ff1e1e;
-      font-size: 1.8rem;
-      letter-spacing: 2px;
     }
 
     .services, .gallery {
@@ -344,14 +345,17 @@
     </div>
   </section>
 
+  <!-- Виправлений блок статистики -->
   <section class="stats">
-    <div class="stats-card stats-header">
+    <div class="stats-header">
       <h2>ЧОМУ НАС ОБИРАЮТЬ</h2>
     </div>
-    <div class="stats-card"><h2>13 РОКІВ</h2><p>Досвід роботи</p></div>
-    <div class="stats-card"><h2>15000+</h2><p>Клієнтів</p></div>
-    <div class="stats-card"><h2>5000+</h2><p>Об'єктів під охороною</p></div>
-    <div class="stats-card"><h2>24/7</h2><p>Моніторинг та реагування</p></div>
+    <div class="stats-row">
+      <div class="stats-card"><h2>13 РОКІВ</h2><p>Досвід роботи</p></div>
+      <div class="stats-card"><h2>15000+</h2><p>Клієнтів</p></div>
+      <div class="stats-card"><h2>5000+</h2><p>Об'єктів під охороною</p></div>
+      <div class="stats-card"><h2>24/7</h2><p>Моніторинг та реагування</p></div>
+    </div>
   </section>
 
   <section class="services" id="services">
@@ -410,7 +414,7 @@
       const y = e.clientY - rect.top;
       const centerX = rect.width / 2;
       const centerY = rect.height / 2;
-      const rotateX = ((y - centerY) / centerY) * 15; // збільшили множник з 7 на 15
+      const rotateX = ((y - centerY) / centerY) * 15;
       const rotateY = ((x - centerX) / centerX) * 15;
       heroImage.style.transform = `rotateX(${-rotateX}deg) rotateY(${rotateY}deg)`;
     });
