--- a/index.html
+++ b/index.html
@@ -218,19 +218,19 @@
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
       max-width: 1000px;
       transform-style: preserve-3d;
+      transition: box-shadow 0.3s ease;
+    }
+
+    .stats-header:hover {
+      box-shadow: 0 0 25px 5px rgba(255, 0, 0, 0.7); /* СВІЧІННЯ */
     }
 
     .stats-header h2 {
       margin: 0;
-      color: #ff0000; /* насичений червоний */
+      color: #ff0000;
       font-size: 1.8rem;
       letter-spacing: 2px;
-      transition: color 0.3s ease;
       cursor: default;
-    }
-
-    .stats-header h2:hover {
-      color: #ff3333; /* яскравіший червоний при наведенні */
     }
 
     .stats-row {
