--- a/index.html
+++ b/index.html
@@ -31,17 +31,6 @@
       z-index: 1000;
     }
 
-    .city-banner {
-      background-color: #1a1a1a;
-      color: #ff1e1e;
-      text-align: center;
-      padding: 15px 20px;
-      font-size: 1.5rem;
-      letter-spacing: 2px;
-      box-shadow: 0 4px 10px rgba(255, 0, 0, 0.3);
-      z-index: 900;
-    }
-
     .header-content {
       display: flex;
       align-items: center;
@@ -124,6 +113,18 @@
 
     .show-tooltip {
       opacity: 1;
+    }
+
+    /* ДОДАНО: СТИЛІ ДЛЯ ХМЕЛЬНИЦЬКИЙ */
+    .city-banner {
+      background-color: #1a1a1a;
+      color: #ff1e1e;
+      text-align: center;
+      padding: 15px 20px;
+      font-size: 1.5rem;
+      letter-spacing: 2px;
+      box-shadow: 0 4px 10px rgba(255, 0, 0, 0.3);
+      z-index: 900;
     }
 
     .hero {
@@ -346,13 +347,65 @@
     </div>
   </header>
 
-  <!-- ✅ ХМЕЛЬНИЦЬКИЙ БАНЕР -->
+  <!-- ДОДАНО: ХМЕЛЬНИЦЬКИЙ -->
   <div class="city-banner">Хмельницький</div>
 
-  <!-- Інший вміст сайту -->
-  <!-- ... (далі йдуть розділи hero, stats, services тощо) -->
+  <section class="hero">
+    <div class="hero-content">
+      <div class="hero-title">
+        <p>ПІДРОЗДІЛ</p>
+        <p>ШВИДКОГО</p>
+        <p>РЕАГУВАННЯ</p>
+      </div>
+      <a class="hex-btn btn" href="#form">ЗАЛИШИТИ ЗАЯВКУ</a>
+      <p>Або зателефонуйте <strong id="phone-number">0800-30-47-74</strong></p>
+      <div id="tooltip" class="copied-tooltip">Скопійовано!</div>
+    </div>
+    <div class="hero-image">
+      <img src="Copilot_20250803_164540.png" alt="Охоронна компанія ТИГР">
+    </div>
+  </section>
 
-  <!-- Код залишився без змін, нижче йде JavaScript -->
+  <section class="stats">
+    <div class="stats-header">
+      <h2>ЧОМУ НАС ОБИРАЮТЬ</h2>
+    </div>
+    <div class="stats-row">
+      <div class="stats-card"><h2>13 РОКІВ</h2><p>Досвід роботи</p></div>
+      <div class="stats-card"><h2>15000+</h2><p>Клієнтів</p></div>
+      <div class="stats-card"><h2>5000+</h2><p>Об'єктів під охороною</p></div>
+      <div class="stats-card"><h2>24/7</h2><p>Моніторинг та реагування</p></div>
+    </div>
+  </section>
+
+  <section class="services" id="services">
+    <h2>МИ НАДАЄМО ШИРОКИЙ ВИБІР ПОСЛУГ</h2>
+    <div class="cards">
+      <div class="card">
+        <h3>ПУЛЬТОВА ОХОРОНА КВАРТИР</h3>
+        <p>Гарантія своєчасного виявлення і нейтралізації загроз</p>
+      </div>
+      <div class="card">
+        <h3>ОСОБИСТА ОХОРОНА (VIP)</h3>
+        <p>Ми впораємось з будь-якою ситуацією</p>
+      </div>
+      <div class="card">
+        <h3>ПРОТИПОЖЕЖНА ОХОРОНА</h3>
+        <p>Комплекс послуг з впровадження систем протипожежного захисту</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="gallery" id="gallery">
+    <h2>ГАЛЕРЕЯ</h2>
+    <div>
+      <img src="guard1.jpg" alt="Охоронець">
+      <img src="guard2.jpg" alt="ТИГР екіпірування">
+      <img src="car1.jpg" alt="Машина TIGR">
+      <img src="badge.jpg" alt="Логотип TIGR">
+    </div>
+  </section>
+
   <script>
     const phoneNumber = document.getElementById('phone-number');
     const tooltip = document.getElementById('tooltip');
