--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
     /* ДОДАНО: СТИЛІ ДЛЯ ХМЕЛЬНИЦЬКИЙ */
     .city-banner {
       background-color: #1a1a1a;
-      color: #ff1e1e;
+      color: #ffffff;
       text-align: center;
       padding: 15px 20px;
-      font-size: 1.5rem;
+      font-size: 2.5rem;
       letter-spacing: 2px;
       box-shadow: 0 4px 10px rgba(255, 0, 0, 0.3);
       z-index: 900;
