--- a/index.html
+++ b/index.html
@@ -124,91 +124,6 @@
       box-shadow: 0 4px 10px rgba(255, 0, 0, 0.3);
     }
 
-    .hero {
-      background: #111;
-      padding: 60px 40px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 60px;
-      flex-wrap: wrap;
-    }
-
-    .hero-content {
-      max-width: 450px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-    }
-
-    .hero-title p {
-      font-size: 2.5rem;
-      margin: 5px 0;
-    }
-
-    .hex-btn {
-      margin-top: 20px;
-      display: inline-block;
-      background: #ff1e1e;
-      color: white;
-      font-size: 1rem;
-      padding: 12px 50px;
-      text-decoration: none;
-      text-transform: uppercase;
-      clip-path: polygon(15% 0%, 85% 0%, 100% 50%, 85% 100%, 15% 100%, 0% 50%);
-    }
-
-    .hex-btn:hover {
-      background: #cc0000;
-    }
-
-    .hero-content p:last-child {
-      margin-top: 10px;
-      cursor: default;
-      transition: all 0.3s ease;
-    }
-
-    .hero-content p strong {
-      font-weight: bold;
-      cursor: pointer;
-      transition: color 0.3s ease;
-    }
-
-    #phone-number:hover {
-      color: #ff1e1e;
-    }
-
-    .hero-image {
-      position: relative;
-      display: inline-block;
-      perspective: 1000px;
-    }
-
-    .hero-image::before {
-      content: "";
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 110%;
-      height: 130%;
-      background: radial-gradient(circle, rgba(255, 0, 0, 0.3) 0%, transparent 70%);
-      z-index: 0;
-      pointer-events: none;
-    }
-
-    .hero-image img {
-      position: relative;
-      z-index: 1;
-      max-width: 600px;
-      width: 100%;
-      height: auto;
-      border-radius: 10px;
-      object-fit: contain;
-      transition: transform 0.3s ease;
-    }
-
     .stats {
       padding: 40px 20px;
       background: #141414;
@@ -263,112 +178,31 @@
       border-color: #ff0000;
       cursor: pointer;
     }
-
-    .services, .gallery {
-      padding: 60px 20px;
-      text-align: center;
-    }
-
-    .services-header {
-      border: 2px solid #444;
-      padding: 20px;
-      max-width: 800px;
-      margin: 0 auto 30px auto;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(255, 0, 0, 0.1);
-      transition: box-shadow 0.3s ease, border-color 0.3s ease;
-    }
-
-    .services-header:hover {
-      box-shadow: 0 0 25px 5px rgba(255, 0, 0, 0.7);
-      border-color: red;
-    }
-
-    .cards {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 20px;
-      margin-top: 30px;
-    }
-
-    .card {
-      background: #1c1c1c;
-      padding: 20px;
-      width: 300px;
-      border-radius: 10px;
-      color: white;
-    }
-
-    .card h3 {
-      color: red;
-    }
-
-    .gallery img {
-      width: 200px;
-      border-radius: 10px;
-      margin: 10px;
-    }
-
-    @media (max-width: 768px) {
-      nav {
-        flex-wrap: wrap;
-        justify-content: center;
-      }
-
-      .hero {
-        flex-direction: column;
-        padding: 40px 20px;
-        gap: 30px;
-      }
-
-      .phone-diamond {
-        display: none;
-      }
-    }
   </style>
 </head>
 <body>
 
-<!-- Твій HTML-контент залишається таким, як є – тобто все, що йде після <body>, не змінюється -->
+  <div class="city-banner">Хмельницький</div>
 
-<!-- Сюди вставити свій HTML-розмітку з секцією .stats -->
+  <section class="stats">
+    <div class="stats-header">
+      <h2>ЧОМУ НАС ОБИРАЮТЬ</h2>
+    </div>
+    <div class="stats-row">
+      <div class="stats-card">
+        <h3>13 РОКІВ</h3>
+        <p>Досвіду</p>
+      </div>
+      <div class="stats-card">
+        <h3>15000+</h3>
+        <p>Клієнтів</p>
+      </div>
+      <div class="stats-card">
+        <h3>24/7</h3>
+        <p>Оперативність</p>
+      </div>
+    </div>
+  </section>
 
-<!-- JS -->
-<script>
-  const phoneNumber = document.getElementById('phone-number');
-  const tooltip = document.getElementById('tooltip');
-  phoneNumber.addEventListener('click', () => {
-    navigator.clipboard.writeText(phoneNumber.innerText).then(() => {
-      tooltip.classList.add('show-tooltip');
-      setTimeout(() => tooltip.classList.remove('show-tooltip'), 1500);
-    });
-  });
-
-  const headerPhone = document.getElementById('header-phone');
-  const headerTooltip = document.getElementById('header-tooltip');
-  headerPhone.addEventListener('click', () => {
-    navigator.clipboard.writeText(headerPhone.innerText).then(() => {
-      headerTooltip.classList.add('show-tooltip');
-      setTimeout(() => headerTooltip.classList.remove('show-tooltip'), 1500);
-    });
-  });
-
-  const heroImage = document.querySelector(".hero-image img");
-  document.querySelector(".hero-image").addEventListener("mousemove", (e) => {
-    const rect = e.currentTarget.getBoundingClientRect();
-    const x = e.clientX - rect.left;
-    const y = e.clientY - rect.top;
-    const centerX = rect.width / 2;
-    const centerY = rect.height / 2;
-    const rotateX = ((y - centerY) / centerY) * 60;
-    const rotateY = ((x - centerX) / centerX) * 60;
-    heroImage.style.transform = `rotateX(${-rotateX}deg) rotateY(${rotateY}deg)`;
-  });
-
-  document.querySelector(".hero-image").addEventListener("mouseleave", () => {
-    heroImage.style.transform = "rotateX(0) rotateY(0)";
-  });
-</script>
 </body>
 </html>
