--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
       max-width: 1000px;
       transition: box-shadow 0.3s ease;
+      /* додано обрамлення */
+      border-style: solid;
+      border-color: #ff0000;
     }
 
     .stats-header:hover {
@@ -170,6 +173,7 @@
       width: 200px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
       transition: transform 0.2s ease, box-shadow 0.2s ease, border-color 0.2s ease;
+      cursor: default;
     }
 
     .stats-card:hover {
