--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       white-space: nowrap;
       transition: color 0.3s ease;
       cursor: pointer;
+      font-weight: normal;
     }
 
     nav a:hover {
@@ -122,6 +123,94 @@
       font-size: 2.5rem;
       letter-spacing: 2px;
       box-shadow: 0 4px 10px rgba(255, 0, 0, 0.3);
+      z-index: 900;
+    }
+
+    .hero {
+      background: #111;
+      padding: 60px 40px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 60px;
+      flex-wrap: wrap;
+    }
+
+    .hero-content {
+      max-width: 450px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      position: relative;
+    }
+
+    .hero-title p {
+      font-size: 2.5rem;
+      margin: 5px 0;
+    }
+
+    .hex-btn {
+      margin-top: 20px;
+      display: inline-block;
+      background: #ff1e1e;
+      color: white;
+      font-size: 1rem;
+      padding: 12px 50px;
+      text-decoration: none;
+      text-transform: uppercase;
+      clip-path: polygon(15% 0%, 85% 0%, 100% 50%, 85% 100%, 15% 100%, 0% 50%);
+    }
+
+    .hex-btn:hover {
+      background: #cc0000;
+    }
+
+    .hero-content p:last-child {
+      margin-top: 10px;
+      cursor: default;
+      transition: all 0.3s ease;
+    }
+
+    .hero-content p strong {
+      font-weight: bold;
+      cursor: pointer;
+      transition: color 0.3s ease;
+    }
+
+    #phone-number:hover {
+      color: #ff1e1e;
+    }
+
+    .hero-image {
+      position: relative;
+      display: inline-block;
+      perspective: 1000px;
+    }
+
+    .hero-image::before {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 110%;
+      height: 130%;
+      background: radial-gradient(circle, rgba(255, 0, 0, 0.3) 0%, transparent 70%);
+      z-index: 0;
+      pointer-events: none;
+    }
+
+    .hero-image img {
+      position: relative;
+      z-index: 1;
+      max-width: 600px;
+      width: 100%;
+      height: auto;
+      border-radius: 10px;
+      object-fit: contain;
+      transition: transform 0.3s ease;
+      will-change: transform;
     }
 
     .stats {
@@ -139,10 +228,8 @@
       padding: 20px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
       max-width: 1000px;
+      transform-style: preserve-3d;
       transition: box-shadow 0.3s ease;
-      /* додано обрамлення */
-      border-style: solid;
-      border-color: #ff0000;
     }
 
     .stats-header:hover {
@@ -154,6 +241,7 @@
       color: #ff0000;
       font-size: 1.8rem;
       letter-spacing: 2px;
+      cursor: default;
     }
 
     .stats-row {
@@ -173,40 +261,187 @@
       width: 200px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
       transition: transform 0.2s ease, box-shadow 0.2s ease, border-color 0.2s ease;
-      cursor: default;
+      transform-style: preserve-3d;
+      will-change: transform;
     }
 
     .stats-card:hover {
-      transform: scale(1.05);
       box-shadow: 0 0 20px rgba(255, 0, 0, 0.7);
-      border-color: #ff0000;
+      border-color: red;
       cursor: pointer;
+    }
+
+    .services, .gallery {
+      padding: 60px 20px;
+      text-align: center;
+    }
+
+    /* НОВА РАМКА ДЛЯ ЗАГОЛОВКА */
+    .services-header {
+      border: 2px solid #444;
+      padding: 20px;
+      max-width: 800px;
+      margin: 0 auto 30px auto;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(255, 0, 0, 0.1);
+      transition: box-shadow 0.3s ease, border-color 0.3s ease;
+    }
+
+    .services-header:hover {
+      box-shadow: 0 0 25px 5px rgba(255, 0, 0, 0.7);
+      border-color: red;
+    }
+
+    .cards {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin-top: 30px;
+    }
+
+    .card {
+      background: #1c1c1c;
+      padding: 20px;
+      width: 300px;
+      border-radius: 10px;
+      color: white;
+    }
+
+    .card h3 {
+      color: red;
+    }
+
+    .gallery img {
+      width: 200px;
+      border-radius: 10px;
+      margin: 10px;
+    }
+
+    @media (max-width: 768px) {
+      nav {
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+
+      nav a {
+        margin: 5px 10px;
+      }
+
+      .hero {
+        flex-direction: column;
+        padding: 40px 20px;
+        gap: 30px;
+      }
+
+      .hero-image img {
+        max-width: 100%;
+      }
+
+      .phone-diamond {
+        display: none;
+      }
     }
   </style>
 </head>
 <body>
+  <header>
+    <div class="header-content">
+      <img src="Tiger logo.png" alt="Логотип ТИГР" class="logo" />
+      <nav>
+        <a href="#about" class="btn">Про нас</a>
+        <a href="#services" class="btn">Послуги</a>
+        <a href="#news" class="btn">Новини</a>
+        <a href="#gallery" class="btn">Галерея</a>
+        <a href="#contact" class="btn">Контакти</a>
+        <a href="#sales" class="btn">Акції</a>
+      </nav>
+      <div style="position: relative;">
+        <a class="phone-diamond btn" id="header-phone">0800-30-47-74</a>
+        <div id="header-tooltip" class="copied-tooltip">Скопійовано!</div>
+      </div>
+    </div>
+  </header>
 
   <div class="city-banner">Хмельницький</div>
+
+  <section class="hero">
+    <div class="hero-content">
+      <div class="hero-title">
+        <p>ПІДРОЗДІЛ</p>
+        <p>ШВИДКОГО</p>
+        <p>РЕАГУВАННЯ</p>
+      </div>
+      <a class="hex-btn btn" href="#form">ЗАЛИШИТИ ЗАЯВКУ</a>
+      <p>Або зателефонуйте <strong id="phone-number">0800-30-47-74</strong></p>
+      <div id="tooltip" class="copied-tooltip">Скопійовано!</div>
+    </div>
+    <div class="hero-image">
+      <img src="Copilot_20250803_164540.png" alt="Охоронна компанія ТИГР">
+    </div>
+  </section>
 
   <section class="stats">
     <div class="stats-header">
       <h2>ЧОМУ НАС ОБИРАЮТЬ</h2>
     </div>
     <div class="stats-row">
-      <div class="stats-card">
-        <h3>13 РОКІВ</h3>
-        <p>Досвіду</p>
+      <div class="stats-card"><h2>13 РОКІВ</h2><p>Досвід роботи</p></div>
+      <div class="stats-card"><h2>15000+</h2><p>Клієнтів</p></div>
+      <div class="stats-card"><h2>5000+</h2><p>Об'єктів під охороною</p></div>
+      <div class="stats-card"><h2>24/7</h2><p>Моніторинг та реагування</p></div>
+    </div>
+  </section>
+
+  <section class="services" id="services">
+    <div class="services-header">
+      <h2>МИ НАДАЄМО ШИРОКИЙ ВИБІР ПОСЛУГ</h2>
+    </div>
+    <div class="cards">
+      <div class="card">
+        <h3>ПУЛЬТОВА ОХОРОНА КВАРТИР</h3>
+        <p>Гарантія своєчасного виявлення і нейтралізації загроз</p>
       </div>
-      <div class="stats-card">
-        <h3>15000+</h3>
-        <p>Клієнтів</p>
+      <div class="card">
+        <h3>ОСОБИСТА ОХОРОНА (VIP)</h3>
+        <p>Ми впораємось з будь-якою ситуацією</p>
       </div>
-      <div class="stats-card">
-        <h3>24/7</h3>
-        <p>Оперативність</p>
+      <div class="card">
+        <h3>ОХОРОНА МАГАЗИНІВ ТА БІЗНЕСУ</h3>
+        <p>Ефективна безпека для вашого бізнесу</p>
       </div>
     </div>
   </section>
 
+  <section class="gallery" id="gallery">
+    <h2>НАША ГАЛЕРЕЯ</h2>
+    <img src="gallery1.jpg" alt="Галерея 1" />
+    <img src="gallery2.jpg" alt="Галерея 2" />
+    <img src="gallery3.jpg" alt="Галерея 3" />
+  </section>
+
+  <script>
+    // Копіювання номера телефону з підказкою
+    function copyText(text, tooltip) {
+      navigator.clipboard.writeText(text).then(() => {
+        tooltip.classList.add('show-tooltip');
+        setTimeout(() => tooltip.classList.remove('show-tooltip'), 2000);
+      });
+    }
+
+    const phoneNumberElement = document.getElementById('phone-number');
+    const tooltip = document.getElementById('tooltip');
+
+    phoneNumberElement.addEventListener('click', () => {
+      copyText(phoneNumberElement.textContent, tooltip);
+    });
+
+    const headerPhone = document.getElementById('header-phone');
+    const headerTooltip = document.getElementById('header-tooltip');
+
+    headerPhone.addEventListener('click', () => {
+      copyText(headerPhone.textContent, headerTooltip);
+    });
+  </script>
 </body>
 </html>
