--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
 
     .stats-header:hover {
       box-shadow: 0 0 25px 5px rgba(255, 0, 0, 0.7);
+      border-color: red; /* Додано: обведення червоним при ховері */
     }
 
     .stats-header h2 {
@@ -260,15 +261,15 @@
       border-radius: 10px;
       width: 200px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
-      transition: transform 0.2s ease, box-shadow 0.2s ease, border-color 0.2s ease;
+      transition: transform 0.2s ease, box-shadow 0.2s ease, border-color 0.2s ease; /* Додано border-color */
       transform-style: preserve-3d;
       will-change: transform;
     }
 
     .stats-card:hover {
       box-shadow: 0 0 20px rgba(255, 0, 0, 0.7);
-      border-color: red;
       cursor: pointer;
+      border-color: red; /* Додано: обведення червоним при ховері */
     }
 
     .services, .gallery {
@@ -386,61 +387,78 @@
       <h2>ЧОМУ НАС ОБИРАЮТЬ</h2>
     </div>
     <div class="stats-row">
-      <div class="stats-card"><h2>13 РОКІВ</h2><p>Досвід роботи</p></div>
-      <div class="stats-card"><h2>15000+</h2><p>Клієнтів</p></div>
-      <div class="stats-card"><h2>5000+</h2><p>Об'єктів під охороною</p></div>
-      <div class="stats-card"><h2>24/7</h2><p>Моніторинг та реагування</p></div>
+      <div class="stats-card"><h2>13 РОКІВ</h2><p>Досвіду роботи</p></div>
+      <div class="stats-card"><h2>100+</h2><p>Охоронних об’єктів</p></div>
+      <div class="stats-card"><h2>3000+</h2><p>Задоволених клієнтів</p></div>
+      <div class="stats-card"><h2>24/7</h2><p>Підтримка</p></div>
     </div>
   </section>
 
-  <section class="services" id="services">
+  <section id="services" class="services">
     <div class="services-header">
-      <h2>МИ НАДАЄМО ШИРОКИЙ ВИБІР ПОСЛУГ</h2>
+      <h2>Наші послуги</h2>
     </div>
     <div class="cards">
       <div class="card">
-        <h3>ПУЛЬТОВА ОХОРОНА КВАРТИР</h3>
-        <p>Гарантія своєчасного виявлення і нейтралізації загроз</p>
+        <h3>Охорона приміщень</h3>
+        <p>Надійний захист вашого майна.</p>
       </div>
       <div class="card">
-        <h3>ОСОБИСТА ОХОРОНА (VIP)</h3>
-        <p>Ми впораємось з будь-якою ситуацією</p>
+        <h3>Охорона заходів</h3>
+        <p>Професійна охорона на будь-яких подіях.</p>
       </div>
       <div class="card">
-        <h3>ОХОРОНА МАГАЗИНІВ ТА БІЗНЕСУ</h3>
-        <p>Ефективна безпека для вашого бізнесу</p>
+        <h3>Моніторинг сигналізацій</h3>
+        <p>24/7 контроль безпеки об'єктів.</p>
       </div>
     </div>
   </section>
 
-  <section class="gallery" id="gallery">
-    <h2>НАША ГАЛЕРЕЯ</h2>
-    <img src="gallery1.jpg" alt="Галерея 1" />
-    <img src="gallery2.jpg" alt="Галерея 2" />
-    <img src="gallery3.jpg" alt="Галерея 3" />
+  <section id="gallery" class="gallery">
+    <img src="gallery1.jpg" alt="Фото 1" />
+    <img src="gallery2.jpg" alt="Фото 2" />
+    <img src="gallery3.jpg" alt="Фото 3" />
   </section>
 
   <script>
-    // Копіювання номера телефону з підказкою
-    function copyText(text, tooltip) {
-      navigator.clipboard.writeText(text).then(() => {
-        tooltip.classList.add('show-tooltip');
-        setTimeout(() => tooltip.classList.remove('show-tooltip'), 2000);
-      });
-    }
-
-    const phoneNumberElement = document.getElementById('phone-number');
-    const tooltip = document.getElementById('tooltip');
-
-    phoneNumberElement.addEventListener('click', () => {
-      copyText(phoneNumberElement.textContent, tooltip);
-    });
-
+    // Копіювання номера телефону з хедера
     const headerPhone = document.getElementById('header-phone');
     const headerTooltip = document.getElementById('header-tooltip');
 
     headerPhone.addEventListener('click', () => {
-      copyText(headerPhone.textContent, headerTooltip);
+      navigator.clipboard.writeText(headerPhone.textContent).then(() => {
+        headerTooltip.classList.add('show-tooltip');
+        setTimeout(() => {
+          headerTooltip.classList.remove('show-tooltip');
+        }, 1500);
+      });
+    });
+
+    // Копіювання номера телефону з герою
+    const phoneNumber = document.getElementById('phone-number');
+    const tooltip = document.getElementById('tooltip');
+
+    phoneNumber.addEventListener('click', () => {
+      navigator.clipboard.writeText(phoneNumber.textContent).then(() => {
+        tooltip.classList.add('show-tooltip');
+        setTimeout(() => {
+          tooltip.classList.remove('show-tooltip');
+        }, 1500);
+      });
+    });
+
+    // Ефект паралаксу для картинки в герої (опціонально)
+    const heroImage = document.querySelector('.hero-image img');
+
+    document.addEventListener('mousemove', (e) => {
+      const {innerWidth, innerHeight} = window;
+      const x = (e.clientX / innerWidth) - 0.5;
+      const y = (e.clientY / innerHeight) - 0.5;
+      heroImage.style.transform = `rotateY(${x * 15}deg) rotateX(${ -y * 15}deg)`;
+    });
+
+    document.addEventListener('mouseleave', () => {
+      heroImage.style.transform = 'rotateY(0deg) rotateX(0deg)';
     });
   </script>
 </body>
