--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
     .stats-card:hover {
       box-shadow: 0 0 20px rgba(255, 0, 0, 0.7);
       cursor: pointer;
+      border: 2px solid red; /* додаємо червону обводку */
     }
 
     .services, .gallery {
